<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@drawable/background"
        >

        <TextView
            android:id="@+id/textView_segundos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_weight="0"
            android:gravity="center_horizontal"
            android:text="@string/set_seconds"
            android:textAllCaps="false"
            android:textColor="#000000"
            android:textIsSelectable="false"
            android:textSize="48sp" />

        <TextView
            android:id="@+id/textView_segundos_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:gravity="center_horizontal"
            android:text="@string/set_select"
            android:textSize="10sp"/>

        <NumberPicker
            android:id="@+id/numberPicker"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="false"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="35dp"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:gravity="left|center"
            android:theme="@style/NumberPickerTheme" />


        <Button
            android:id="@+id/btn_iniciar"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="87dp"
            android:layout_marginBottom="0dp"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_marginTop="20dp"
            android:layout_weight="0"
            android:background="@drawable/roundedbutton_set_iniciar"
            android:onClick="onClickIniciar"
            android:text="@string/set_btn_start"
            android:textAllCaps="false"
            android:textColor="#ffffff"
            android:textSize="35sp" />

        <Button
            android:id="@+id/btn_sair"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginBottom="35dp"
            android:layout_marginLeft="130dp"
            android:layout_marginRight="130dp"
            android:layout_marginTop="20dp"
            android:layout_weight="0"
            android:background="@android:color/transparent"
            android:onClick="onClickSair"
            android:text="@string/set_btn_exit"
            android:textAllCaps="false"
            android:textColor="#C7C7C7"
            android:textSize="16sp" />
    </LinearLayout>
</LinearLayout>