<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_bt_list"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_ligar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:gravity="center_horizontal"
            android:text="@string/btConList_con"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="48sp"
            android:textStyle="normal" />

        <TextView
            android:id="@+id/tv_sel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="center_horizontal"
            android:text="@string/btConList_select"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textSize="10sp" />

        <ListView
            android:id="@+id/listViewBluetoothDevs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:background="@android:color/transparent"></ListView>


        <Button
            android:id="@+id/btn_search"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_marginTop="20dp"
            android:layout_weight="0"
            android:background="@drawable/roundedbutton_list_procurar"
            android:onClick="onClickSearch"
            android:text="@string/btConList_btn_search"
            android:textAllCaps="false"
            android:textColor="#ffffff"
            android:textSize="25sp" />

        <Button
            android:id="@+id/btn_sair"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginBottom="35dp"
            android:layout_marginLeft="130dp"
            android:layout_marginRight="130dp"
            android:layout_marginTop="20dp"
            android:layout_weight="0"
            android:background="@android:color/transparent"
            android:onClick="onClickSair"
            android:text="@string/set_btn_exit"
            android:textAllCaps="false"
            android:textColor="#C7C7C7"
            android:textSize="16sp" />


    </LinearLayout>

    <!--
        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="match_parent"
            android:layout_height="90dp" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lineSpacingExtra="8sp"
            android:text="Já foram ligados antes:"
            android:textSize="20sp"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textStyle="bold" />

        <ListView
            android:id="@+id/listViewBluetoothPairedDevs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        </ListView>
    -->

</LinearLayout>